[package]
name = "ecdsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ec_core = {path = "../ec-core"}
rand = "0.8.5"
num-bigint = { version="0.4.3", features=["rand"] }
sha256 = "1.1.4"
hex = "0.4.3"
